# demo_test

./: .gitignore  .gitmodules  LICENSE  README.md  a.out  about_time_range.py  c_language_muti_thread.c  check_dict_rec.py  check_list__numpy_vs_loop.py  col_code_line.sh  day_some.py  demo_pyautogui.py  fc_2020-05-03.xlsx  func_func.py  go_json_unknown.go  go_range.go  multi_process_pool.py  nethttp.go  py_debuger_pySnooper.py  readMe.md  test_fastapi.sh  test_pointer_func.c  test_py_apscheduler.py  test_pyspark.py  test_struct_size.c  test_win_pyhook.py  wchar.c
.ipynb_checkpoints/: test_dataframe_repair_date_index-checkpoint.ipynb
C_Network_Sniffer_LINUX-master/: log.txt  network_sniffer  readMe.md
a_simple_static_web/: main.py
c_lang/: Pipfile  c_language_muti_thread.c  hi.c  hia.c  regular.c  test_list.c  test_list_2.c  test_pointer_func.c
cpp_lang/: class.cpp  class_test.cpp  hi  namespace_test.cpp  str_test.cpp  template_text.cpp
cpp_lang/opencv_some/base/: CMakeLists.txt  hist.cpp  mat.cpp
cristal_lang/: build_txt.cr  hello_world  help  hi  hi_static  htpserver.cr  readMe.md
crystal_lang/: buffered_channels.cr  concurrency_model.cr  control_expre_puts.cr  help.cr  literals_puts.cr  readMe.md
demo_collections/: counter_txt.txt  default_dict.py  demo_counter.py
diagrams_some/: diagrams_axie.py  more.py  requirements.md  ruler_ai.py
dym_models/: config.py  dym_models.py
elk/: docker-compose.yml
ffmpeg_some/: Makefile  hello.py  hello_av.py
go_lang/: README.md  amnesia.go  channel_buffering_go.go  channel_go.go  defer.go  go.sum  go_http.go  (+28 more)
(+283 files in other folders)
